V3 room db eliminada

--- a/app/src/main/res/layout/activity_add_tarea.xml
+++ b/app/src/main/res/layout/activity_add_tarea.xml
@@ -21,10 +21,10 @@
             app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="84dp"
             app:layout_constraintTop_toTopOf="parent" android:hint="Titulo"/>
     <Button
-            android:text="Add Note"
+            android:text="@string/anadir"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/btnAddNotes" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:id="@+id/btnAnadir" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintHorizontal_bias="0.699" android:layout_marginBottom="120dp"
             app:layout_constraintBottom_toBottomOf="parent"/>
