--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -9,10 +9,12 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" android:id="@+id/itemLayout"
-            android:background="@drawable/background_layout">
+            android:background="@drawable/background_layout" android:elevation="2dp"
+            android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp">
         <LinearLayout
                 android:orientation="vertical"
-                android:layout_width="340dp"
+                android:layout_width="320dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="3pt">
             <TextView
