--- a/app/src/main/res/layout/activity_add_tarea.xml
+++ b/app/src/main/res/layout/activity_add_tarea.xml
@@ -18,7 +18,7 @@
             android:ems="10"
             android:id="@+id/etTitulo" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="84dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="124dp"
             app:layout_constraintTop_toTopOf="parent" android:hint="Titulo"/>
     <Button
             android:text="@string/anadir"
@@ -36,7 +36,15 @@
             android:ems="10"
             android:id="@+id/etDescripcion" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="84dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="56dp"
             app:layout_constraintTop_toBottomOf="@+id/etTitulo"
             android:hint="Descripcion"/>
+    <Switch
+            android:text="Prioridad alta"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/swPrioritario" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginTop="96dp" app:layout_constraintTop_toBottomOf="@+id/etDescripcion"
+            app:layout_constraintHorizontal_bias="0.231"/>
 </android.support.constraint.ConstraintLayout>
