--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -14,7 +14,12 @@
             android:layout_marginBottom="5dp">
         <LinearLayout
                 android:orientation="vertical"
-                android:layout_width="320dp"
+                android:layout_width="4dp"
+                android:layout_height="match_parent" android:id="@+id/lyImportancia" android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp" android:layout_marginRight="3dp"/>
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="280dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="3pt">
             <TextView
@@ -32,17 +37,16 @@
         </LinearLayout>
         <LinearLayout
                 android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-            <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp" app:srcCompat="@drawable/papelera"
-                    android:id="@+id/ivDelete" android:layout_weight="1" android:contentDescription="@string/eliminar"
-                    android:layout_marginEnd="10pt"/>
-            <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp" app:srcCompat="@drawable/lapiz"
-                    android:id="@+id/ivEdit" android:layout_weight="1" android:contentDescription="@string/editar"/>
+                android:layout_width="70dp"
+                android:layout_height="70dp" android:gravity="center">
+            <TextView
+                    android:text="00:00"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/tvHora" android:gravity="center"/>
+            <TextView
+                    android:text="12 dic"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/tvFecha" android:gravity="center"/>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
