--- a/app/src/main/res/layout/activity_detalle.xml
+++ b/app/src/main/res/layout/activity_detalle.xml
@@ -28,5 +28,27 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.0" android:textSize="24sp" android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvHora"
+            app:layout_constraintTop_toBottomOf="@+id/tvDescripcion" android:layout_marginTop="84dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="80dp" android:gravity="left"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvFecha" android:layout_marginTop="84dp"
+            app:layout_constraintTop_toBottomOf="@+id/tvDescripcion"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="80dp" android:gravity="right"/>
+    <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp" app:srcCompat="@drawable/lapiz"
+            android:id="@+id/btnEditar" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="140dp"
+            android:layout_marginBottom="36dp" app:layout_constraintBottom_toBottomOf="parent"/>
+    <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp" app:srcCompat="@drawable/papelera"
+            android:id="@+id/btnEliminar" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="56dp"
+            android:layout_marginBottom="36dp" app:layout_constraintBottom_toBottomOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
