--- a/app/src/main/res/layout/activity_add_tarea.xml
+++ b/app/src/main/res/layout/activity_add_tarea.xml
@@ -16,8 +16,8 @@
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" tools:layout_editor_absoluteY="0dp"
-            tools:layout_editor_absoluteX="0dp" android:id="@+id/linearLayout3">
+            android:layout_height="match_parent" tools:layout_editor_absoluteY="-16dp"
+            tools:layout_editor_absoluteX="-178dp" android:id="@+id/linearLayout3">
     </LinearLayout>
     <EditText
             android:layout_width="0dp"
@@ -56,18 +56,15 @@
 
     <Button
             android:text="Añadir Fecha y hora"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/btnFechaHora"
-            app:layout_constraintBottom_toTopOf="@+id/lyFechaHora"
             android:background="@drawable/red_btn"
-            android:textColor="@color/colorPrimary"
-            app:layout_constraintTop_toBottomOf="@+id/swPrioritario"
-            app:layout_constraintVertical_bias="0.0"
-            android:layout_marginTop="70dp" android:paddingRight="15dp"
-            android:paddingLeft="15dp" app:layout_constraintStart_toEndOf="@+id/linearLayout3"
-            android:layout_marginStart="40dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0" android:layout_marginEnd="40dp"/>
+            android:textColor="@color/colorPrimary" app:layout_constraintTop_toBottomOf="@+id/swPrioritario"
+            android:layout_marginTop="65dp"
+            app:layout_constraintEnd_toEndOf="@+id/linearLayout3" android:layout_marginStart="40dp"
+            app:layout_constraintStart_toStartOf="@+id/linearLayout3" app:layout_constraintHorizontal_bias="0.0"
+            android:layout_marginEnd="40dp"/>
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="0dp"
@@ -78,8 +75,8 @@
             android:layout_marginStart="40dp" app:layout_constraintStart_toStartOf="parent"
             android:background="@drawable/red_style_border" android:layout_marginEnd="40dp"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/btnAnadir"
-            android:layout_marginTop="90dp" app:layout_constraintVertical_bias="0.26"
-            android:id="@+id/lyFechaHora">
+            android:layout_marginTop="100dp" app:layout_constraintVertical_bias="0.26"
+            android:id="@+id/lyFechaHora" android:visibility="invisible">
         <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="wrap_content"
@@ -93,7 +90,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.288" app:layout_constraintStart_toEndOf="@+id/tvHora"/>
             <TextView
-                    android:text="escoge fecha"
+                    android:text="@string/escoge_fecha"
                     android:layout_width="wrap_content"
                     android:layout_height="23dp"
                     android:id="@+id/tvFecha" app:layout_constraintStart_toEndOf="@+id/ivCalendario"
@@ -118,7 +115,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.204"/>
             <TextView
-                    android:text="escoge hora"
+                    android:text="@string/escoge_hora"
                     android:layout_width="wrap_content"
                     android:layout_height="23dp"
                     android:id="@+id/tvHora" app:layout_constraintStart_toEndOf="@+id/ivReloj"
