--- a/app/src/main/res/layout/activity_add_tarea.xml
+++ b/app/src/main/res/layout/activity_add_tarea.xml
@@ -16,8 +16,8 @@
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" tools:layout_editor_absoluteY="-16dp"
-            tools:layout_editor_absoluteX="-178dp" android:id="@+id/linearLayout3">
+            android:layout_height="match_parent" tools:layout_editor_absoluteY="0dp"
+            tools:layout_editor_absoluteX="0dp" android:id="@+id/linearLayout3">
     </LinearLayout>
     <EditText
             android:layout_width="0dp"
@@ -46,13 +46,15 @@
             app:layout_constraintTop_toBottomOf="@+id/etTitulo"
             android:hint="Descripcion"/>
     <Switch
-            android:text="Prioridad alta"
+            android:text="Tarea prioritaria  "
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/swPrioritario" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.044" android:layout_marginStart="40dp"
             android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/etDescripcion"
-            app:layout_constraintHorizontal_bias="0" android:layout_marginStart="40dp"/>
+            android:textColor="@android:color/tertiary_text_light" android:textSize="16dp"/>
+
 
     <Button
             android:text="Añadir Fecha y hora"
