--- a/app/src/main/res/layout/item_categoria.xml
+++ b/app/src/main/res/layout/item_categoria.xml
@@ -4,7 +4,7 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content" android:orientation="horizontal"
               android:background="@drawable/background_layout" android:gravity="end" android:layout_marginTop="4dp"
-              android:layout_marginBottom="4dp">
+              android:layout_marginBottom="4dp" android:id="@+id/lyCategoria">
     <TextView
             android:text="TextView"
             android:layout_width="260dp"
