--- a/app/src/main/res/layout/activity_gestion_categorias.xml
+++ b/app/src/main/res/layout/activity_gestion_categorias.xml
@@ -45,16 +45,17 @@
     </LinearLayout>
     <LinearLayout
             android:orientation="vertical"
-            android:layout_width="395dp"
-            android:layout_height="484dp" android:layout_marginTop="60dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             app:layout_constraintTop_toBottomOf="@+id/lyColores"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="40dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="40dp">
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="10dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="10dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="60dp">
 
         <android.support.v7.widget.RecyclerView
                 android:clipToPadding="false"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:id="@+id/rvCategorias"
                 android:clipChildren="true"/>
 
