--- a/app/src/main/res/layout/item_categoria.xml
+++ b/app/src/main/res/layout/item_categoria.xml
@@ -12,10 +12,10 @@
             android:textSize="18sp" android:layout_marginEnd="10dp"/>
     <ImageView
             android:layout_width="30dp"
-            android:layout_height="30dp" app:srcCompat="@drawable/lapiz" android:id="@+id/imageView4"
+            android:layout_height="30dp" app:srcCompat="@drawable/lapiz" android:id="@+id/ivEditar"
             android:layout_marginEnd="20dp"/>
     <ImageView
             android:layout_width="30dp"
-            android:layout_height="30dp" app:srcCompat="@drawable/papelera" android:id="@+id/imageView3"
+            android:layout_height="30dp" app:srcCompat="@drawable/papelera" android:id="@+id/ivEliminar"
             android:layout_marginEnd="10dp"/>
 </LinearLayout>
