Panel categorías acabado

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#C62828</color>
     <color name="colorPrimaryDark">#8e0000</color>
     <color name="colorAccent">#c62828</color>
-    <color name="grisClaro">#F5F5F5</color>
+    <color name="grisClaro">#f7f7f7</color>
 </resources>
