--- a/app/src/main/res/layout/activity_gestion_categorias.xml
+++ b/app/src/main/res/layout/activity_gestion_categorias.xml
@@ -5,7 +5,8 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".activities.GestionCategoriasActivity">
+        tools:context=".activities.GestionCategoriasActivity"
+        android:background="@color/grisClaro">
 
     <include
             android:id="@+id/toolbar"
@@ -17,9 +18,11 @@
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:id="@+id/etTitulo" android:layout_marginTop="40dp"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar" android:layout_marginEnd="40dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="40dp"
-            app:layout_constraintStart_toStartOf="parent" android:autofillHints="" android:hint="@string/nombre"/>
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            android:layout_marginStart="40dp"
+            app:layout_constraintStart_toStartOf="parent" android:autofillHints="" android:hint="@string/nombre"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
+            android:layout_marginEnd="40dp"/>
 
 
     <LinearLayout
@@ -27,17 +30,17 @@
             android:layout_width="wrap_content"
             android:id="@+id/lyColores"
             android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/etTitulo"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/toolbar"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintBottom_toTopOf="@+id/linearLayout3" app:layout_constraintVertical_bias="0.0"
-            android:layout_marginStart="40dp" android:gravity="center"
-            android:padding="5dp" android:layout_marginTop="40dp">
+            android:layout_marginTop="40dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="40dp"
+            android:layout_marginStart="40dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:gravity="center_vertical" app:layout_constraintHorizontal_bias="0.0">
         <TextView
-                android:text="Color de categoría"
+                android:text="Color "
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/tvColores"
                 android:textColor="@android:color/tertiary_text_light"
-                android:layout_marginEnd="20dp" android:textSize="16sp"/>
+                android:layout_marginEnd="15dp" android:textSize="18sp"/>
         <View
                 android:layout_width="40dp"
                 android:layout_height="40dp" android:id="@+id/viewColor" android:layout_weight="1"
@@ -47,7 +50,7 @@
             android:orientation="vertical"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@+id/lyColores"
+            app:layout_constraintTop_toBottomOf="@+id/btnNuevo"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="10dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="10dp"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="60dp">
@@ -60,12 +63,22 @@
                 android:clipChildren="true"/>
 
     </LinearLayout>
+    <Button style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnNuevo"
+            android:layout_marginEnd="5dp"
+            app:layout_constraintTop_toBottomOf="@+id/etTitulo"
+            android:text="@string/nuevo"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="1.0"
+            android:layout_marginTop="40dp" app:layout_constraintEnd_toStartOf="@+id/btnAnadir"/>
     <Button style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/btnAnadir" app:layout_constraintStart_toEndOf="@+id/lyColores"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="40dp"
+            android:id="@+id/btnAnadir"
             android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/etTitulo"
-            app:layout_constraintHorizontal_bias="1" android:text="@string/anadir"/>
+            android:text="@string/anadir"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="40dp"/>
 
 </android.support.constraint.ConstraintLayout>
