--- a/app/src/main/res/drawable/background_layout.xml
+++ b/app/src/main/res/drawable/background_layout.xml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape
+<shape
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:shape="rectangle">
 
-                android:shape="rectangle"
-        >
-            <solid android:color="#ffffff"/>
-            <corners android:radius="5pt"/>
-            <padding android:top="5pt"
-                     android:right="5pt"
-                     android:left="5pt"
-                     android:bottom="5pt"/>
+    <solid android:color="@android:color/white"/>
 
-        </shape>
-    </item>
-</selector>
+    <corners android:radius="5pt"/>
+    <padding android:top="5pt"
+             android:right="5pt"
+             android:left="5pt"
+             android:bottom="5pt"/>
+
+</shape>
