--- a/app/src/main/res/layout/activity_add_tarea.xml
+++ b/app/src/main/res/layout/activity_add_tarea.xml
@@ -62,7 +62,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/btnCategorias" android:layout_weight="0.5"
                 android:textSize="16sp"
-                android:textColor="@android:color/tertiary_text_light" android:drawableLeft="@drawable/carpeta_roja"/>
+                android:textColor="@android:color/tertiary_text_light" android:drawableLeft="@drawable/carpeta_add_tarea"/>
     </LinearLayout>
 
 
