--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -8,7 +8,7 @@
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:id="@+id/itemLayout"
+            android:layout_height="wrap_content" android:id="@+id/lyBackground"
             android:background="@drawable/background_layout" android:elevation="2dp"
             android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp">
